corrected text alignment

--- a/style.css
+++ b/style.css
@@ -1,57 +1,48 @@
 html {
     font-family: sans-serif;
     line-height: 1.15;
-    -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: transparent;
     height: 100%;
 }
-.body-font-color {
-    color: #fff;
-}
-/* body {
-    margin: 50px;
-    font-family: source sans pro,Helvetica,Arial,sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    text-align: left;
-    background-color: #fff
-} */
 body {
     background-image: url("src/images/MainPage_V3.png"),linear-gradient(90deg, #000 50%, #000 50%) ;
     background-repeat: no-repeat;
     background-position: center;
+}
+.info {
+    
+    font-size: 18px;
+    font-family: "Google Sans Display", Roboto, Arial, sans-serif;
+    line-height: 24px;
+    position: absolute;
+    top: 10%;
+    left: 55%;
+    right: 15%;
+}
+#about {
+    text-transform: uppercase;
+    font-size: 24px;
+}
+
+@media screen and (max-width: 481px) {
+
+body {
+    background-image: url("src/images/MainPage_Mobile.png") ;
+    background-repeat: no-repeat;
+    align-items: center;
     
 }
-.headline {
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 30px;
+
+.info {
+    
+    font-size: 18px;
     font-family: "Google Sans Display", Roboto, Arial, sans-serif;
-    line-height: 48px;
-}
-/* h1,h2,h3,h4,h5,h6 {
-    margin-top: 0;
-    margin-bottom: .5rem
-} */
-#title {
-    position: relative;
-    top: 20%;
-    /* left: 100px; */
-}
-.v-auto {
-    font-size: 30px;
-    color: #bb23c7;
-}
-.clemson-image {
+    line-height: 24px;
     position: absolute;
-    right: 100px;
+    top: 65%;
+    left: 10%;
 }
-p {
-    margin-top: 0;
-    margin-bottom: 1rem
+#about {
+    text-transform: uppercase;
+    font-size: 24px;
 }
-.student-info {
-    margin: 0px 50px 0px 50px;
 }
